# Korean_bus_temrinal_data

./: .gitignore  CLAUDE.md  bus_terminals.csv  bus_terminals_geo.csv  pyproject.toml
csv_create/: createCSV.py  geocoding.py  terminal_info.py
python/: search_nearby.py  test.ipynb
